# rpg-ai-game

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
backend/: .envexample  Dockerfile  README.md  pyproject.toml  test_backend.py  test_backend.sh
backend/app/: crud.py  initial_data.py  logging_config.py  main.py  models.py  test_backend.py  test_backend_loop.py
backend/app/api/routes/: admin.py  ai_actions.py  aimodels.py  config.py  games.py  players.py  scenarios.py
backend/app/core/: config.py  db.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  tsconfig.json  vite.config.ts
frontend/nginx/: nginx-backend-not-found.conf  nginx-default.conf  nginx.conf
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/api/: gameApi.ts
frontend/src/components/: ActionOptions.tsx  GameBoard.tsx  PlayerStats.tsx
frontend/src/types/: gameTypes.ts
ia/: ollama-entrypoint.sh  ollama-entrypont.sh
